# freedom-wall-analytics

./: .gitignore  LICENSE  LICENSE-DATA  README.md  execution_log.md  methodology_changes.md
dashboard/: action_log.md  index.html  redesign_plan.md  serve.cmd  serve.sh
docs/: Thesis_Proposal.md  execution_log.md  scraper_freeze_postmortem.md
preprocessing/: README.md  action_log.md  pyproject.toml  requirements.txt
preprocessing/configs/: schools.yaml  stopwords_cebuano.txt  stopwords_english.txt  stopwords_ilokano.txt  stopwords_tagalog.txt  tagalog_given_names.txt
preprocessing/fixtures/: golden_input.jsonl
preprocessing/output/: FW-01_cleaned.json  FW-02_cleaned.json  FW-03_cleaned.json  FW-04_cleaned.json  FW-05_cleaned.json  FW-06_cleaned.json  FW-07_cleaned.json  FW-08_cleaned.json  FW-09_cleaned.json  SLU_cleaned.json  _qc_report.json  _rejected.jsonl  baguio_benguet_posts.json  luzon_provincial_posts.json
preprocessing/preprocessing/: __init__.py  io_utils.py  logging_setup.py  name_lists.py  phase01_select.py  phase02_anonymize_school.py  phase03_noise_regex.py  phase04_ner.py  phase05_linguistic.py  phase06_stopwords.py  phase07_engagement.py  phase08_timestamps.py  phase09_language.py  phase10_dedupe_qc.py  pipeline.py  regex_lib.py  run.py  schools.py
preprocessing/tests/: test_no_school_leaks.py  test_phase02_anonymize.py  test_phase03_regex.py  test_phase06_stopwords.py  test_phase08_timestamps.py  test_phase09_language.py  test_pipeline_e2e.py
scraper_project/: .gitignore  QUICKSTART.md  README.md  action_log.md  apify_scraper.py  config.py  (+14 more)
(+222 files in other folders)
