[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "preprocessing"
version = "0.1.0"
description = "Freedom Wall data cleaning and preprocessing pipeline"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["preprocessing*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
